workloads/apps/jellyfin/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      name: jellyfin
      namespace: jellyfin
      labels:
        app: jellyfin
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                - key: app
                  operator: In
                  values:
                    - compute
      containers:
      - name: jellyfin
        livenessProbe:
          tcpSocket:
            port: 8096
          initialDelaySeconds: 120
        image: docker.io/linuxserver/jellyfin:latest
        ports:
        - containerPort: 8096
          protocol: TCP
        securityContext:
          privileged: true
          capabilities:
            drop:
            - NET_ADMIN
            - CAP_MKNOD
            - CAP_NET_RAW
            - CAP_AUDIT_WRITE
        volumeMounts:
        - name: media
          mountPath: /media
        - name: conf
          mountPath: /config
          subPath: config
        - name: cache
          mountPath: /config/cache
          subPath: cache
        - name: dev-dri
          mountPath: /dev/dri/renderD128
        - name: logs
          mountPath: /config/log
          subPath: log
        - name: transcodes
          mountPath: /config/data/transcodes
          subPath: transcodes
        resources:
          requests:
            memory: "1G"
            cpu: "500m"
          limits:
            memory: "15G"
            cpu: "5000m"
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: local-path-media-pvc
      - name: conf
        persistentVolumeClaim:
          claimName: local-path-conf-pvc
      - name: dev-dri
        hostPath:
          path: /dev/dri/renderD128
          type: CharDevice
      - name: card1
        hostPath:
          path: /dev/dri/card1
          type: CharDevice
      - name: cache
        emptyDir:
          medium: Memory
          sizeLimit: 2Gi
      - name: logs
        emptyDir:
          medium: Memory
          sizeLimit: 500Mi
      - name: transcodes
        emptyDir:
          medium: Memory
          sizeLimit: 10Gi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
